--- a/PetShop/app/src/main/AndroidManifest.xml
+++ b/PetShop/app/src/main/AndroidManifest.xml
@@ -20,6 +20,15 @@
         android:theme="@style/Theme.PetShop"
         tools:targetApi="31">
         <activity
+            android:name=".AddActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AchadoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PerdidoActivity"
+            android:exported="false" />
+        <activity
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
